modified homepage view

--- a/www/templates/selectedRecipe.html
+++ b/www/templates/selectedRecipe.html
@@ -7,11 +7,12 @@
 
     <!--<img src = "http://lorempixel.com/400/200/">-->
     <div>
-    <img ng-src="{{img.url}}">
+    <img align="center" ng-src="{{img.url}}">
     </div>
 
-    <p>save it to favorite</p>
-    
+    <br>
+    <h2 align="center">Save this Recipe!</h2>
+
 
 
     <div align="center" width="100" height="100">
