--- a/www/templates/homepage.html
+++ b/www/templates/homepage.html
@@ -2,10 +2,20 @@
 
   <ion-content class="has-header" padding="true" style="background: url(img/background.png) center; background-size: cover;">
 
-    <form name="loginForm" class="list " id="login-form1">
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<h1 align="center" style ="font-family: Times, serif; font-size:  3em; color:00"> Welcome to My FridgePAL</h1>
+  <!--  <form name="loginForm" class="list " id="login-form1">
             <ion-list class=" " id="login-list2">
 
                 <div class="app-icon"></div>
+
 
                 <label class="item item-input item-floating-label">
                     <span class="input-label" style="color: #9F9F9F;">Email</span>
@@ -16,16 +26,19 @@
                     <input ng-model="user.password" style="color: white;" type="password" placeholder="Password">
                 </label>
 
+
             </ion-list>
 
             <div style="height: 40px;" class="spacer"></div>
             <button ng-click="loginEmail(loginForm,user)" class=" button button-assertive  button-block  icon-left ion-ios-email-outline "  id="signup-button3">LOGIN WITH EMAIL</button>
 
-		<!-- #2. FB login-->
+
 			<button ng-click="loginFb('facebook')" class=" button button-positive  button-block icon-left ion-social-facebook "  id="signup-button4">LOGIN WITH FACEBOOK</button>
         </form>
 
 		<a class=" button button-stable  button-block button-clear icon-left ion-ios-email-outline " id="login-button5" ui-sref="tabsController.forgotPassword">FORGOT PASSWORD</a>
+-->
+
 
 	</ion-content>
 
